--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/parser": "^4.14.0",
     "add": "^2.0.6",
     "antd": "^4.10.3",
+    "axios": "^0.21.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1",
